--- a/public/html/records.html
+++ b/public/html/records.html
@@ -30,52 +30,22 @@
         </div>
         <a class="navbar-brand" href="#"></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="/collection" class="btn logout-btn" role="button">My Collection</a></li>
             <li><a href="/search" class="btn logout-btn" role="button" id="navBut">Search</a></li>
             <li><a href="/logout" class="btn logout-btn" role="button">Logout</a></li>
         </ul>
     </nav>
-    
+
     <div class="d-flex justify-content-center h-100">
         <div class="user_card record_card">
             <div class="card-header"></div>
             <h2 class="teal lighten-5" id="headerCard">Record Search Results:</h2>
             <!-- record number 1 -->
-            <div class=" container" id="recy">
-                <div class="card teal lighten-4" id="serchRecord" role="alert">
-                    Weyes Blood 'Titanic Rising' Limited Edition.<a style="float:right" href="#"
-                        class="alert-link"><br>search for user</a>
-                </div>
-            </div>
-            <!-- record number 2 -->
-            <div class="container contTwo" id="recy">
-                <div class="card teal lighten-3" id="serchRecord" role="alert">
-                    Kevin Morby 'OMG' Limited Edition.<a style="float:right" href="#" class="alert-link"> <br>search for
-                        user</a>
-                </div>
-            </div>
-
-            <div class="row">
-                <div style="width:100%" id="cardSet">
-                    <div class="row">
-                        <div class="col s12 m6">
-                            <div class="card teal lighten-2">
-                                <div class="card-content white-text">
-                                    <span class="card-title">Kevin Morby</span>
-                                    <h6>OMG!</h6>
-                                    <p>"Kansas City 'diehard' re-imagines his life's work in
-                                        gospel forte. Think Dylan's gospel stretch." --NY TIMES</p>
-                                </div>
-                                <div class="card-action">
-                                    <a class="link" href="#">Check The Record</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
+    <div class=" container" id="recy">
 
+    </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="../js/events.js"></script>
@@ -89,8 +59,8 @@
     var type = searchStorage[0];
     var value = searchStorage[1];
     var url = "/api/records/" + type + "/" + value
-    if (type = "all") {
-        url = "api/records"
+    if (type === "all") {
+        url = "/api/records"
     };
     $.get(url, function (data) {
         for (x in data) {
@@ -135,35 +105,14 @@
                 "id": username[x]
             });
             button.css({
-                "background-color":"blue"
+                "background-color": "blue"
             })
-            
+
 
             $("#recy").append(divOne);
 
-
-
-
-            // aTag.css({
-            //     "float": "right"
-            // });
-            // aTag.attr({
-            //     "class": "alert-link"
-            // });
-            // aTag.text("View This Persons Catalog")
-            // $div.append()
-
-
-
         };
     });
-
-
-              //* Once we get the value of what we will search call on the corresponding api call to the server
-              //dynamically render the page
-
-
-
 
 </script>
 
