Fixed search functionality. ALL ROUTES WORK IN SEARCH

--- a/public/html/collection.html
+++ b/public/html/collection.html
@@ -143,7 +143,7 @@
                 "id": username[x]
             });
             button.css({
-                "background-color": "blue"
+                "background-color": "red"
             })
 
 
