--- a/public/html/search.html
+++ b/public/html/search.html
@@ -67,11 +67,12 @@
             <img src="../images/logo.jpeg" class="brand_logo" alt="Logo">
         </div>
         <a class="navbar-brand" href="#"></a>
-        <form class="form-inline">
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="/collection" class="btn logout-btn" role="button">My Collection</a></li>
-            <a href="/logout" class="btn logout-btn" role="button">Logout</a>
-        </form>
+            <li><a href="/logout" class="btn logout-btn" role="button">Logout</a></li>
+        </ul>
     </nav>
+
     <div class="d-flex justify-content-center h-100">
         <div class="user_card search_card">
             ​
